syntax = "proto3";

package discount_checkout;

service DiscountService {
  rpc GetDiscountCheckout(DiscountRequest) returns (Discount) {}
  rpc GetDiscountCheckoutStream (stream DiscountRequest) returns (stream Discount) {}
}

message DiscountRequest {
  repeated ProductRequest products = 4;
}

message ProductRequest {
  int32 productID = 1;
  int32 quantity = 2;
}

message Product {
  int32 id = 1;
  int32 quantity = 2;
  int32 unit_amount = 3;
  int32 total_amount = 4;
  int32 discount = 5;
  bool is_gift = 6;
}

message Discount {
  uint32 total_amount = 1;
  uint32 total_amount_with_discount = 2;
  uint32 total_discount = 3;
  repeated Product products = 4;
}